# swatmodflow

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  bc.mod  cmake_install.cmake  f_units.mod  global.mod  gwfbasmodule.mod  gwfbcfmodule.mod  gwfdrnmodule.mod  gwfetsmodule.mod  gwfevtmodule.mod  gwfhufmodule.mod  gwflakmodule.mod  gwflpfmodule.mod  gwfstrmodule.mod  gwfsubmodule.mod  gwfswrmodule.mod  gwfswtmodule.mod  gwfupwmodule.mod  gwfuzfmodule.mod  hydibsmodule.mod  hydsubmodule.mod  ilupc_mod.mod  install_manifest.txt  machine_constants.mod  mf_rt_link.mod  modevent.mod  obsbasmodule.mod  obschdmodule.mod  obsdrnmodule.mod  obsghbmodule.mod  obsstrmodule.mod  parameters.mod  pcgmodule.mod  rt_global.mod  smrt_parm.mod  solver.mod  (+6 more)
modflow/: Makefile  SConscript  mf_MF_NWT.f  mf_close.f  mf_gsol7.f  mf_gwf2bas7_NWT.f  mf_gwf2drn7_NWT.f  mf_gwf2evt7.f  mf_gwf2ghb7_NWT.f  mf_gwf2hfb7_NWT.f  mf_gwf2huf7.f  mf_gwf2rch7.f  mf_gwf2riv7_NWT.f  mf_gwf2swr7_NWT.f  mf_gwf2uzf1_NWT.f  mf_gwf2wel7_NWT.f  mf_gwfuzfmodule_NWT.f  mf_lmt7_NWT.f  mf_openspec.inc  mf_pcg7_NWT.f  mf_read.f  mf_rt_link.f  mf_run.f  mf_utl7.f
other/: modevent.f  units.f
rt3d/: Makefile  rt_adv.f  rt_btn.f  rt_close.f  rt_dsp.f  rt_fmi.f  rt_gcg.f  rt_implicit.f  rt_init.f  rt_modparm.f  rt_openio.f  rt_rct.f  rt_read.f  rt_run.f  rt_rxns.f  rt_ssm.f  rt_stress.f  rt_vst.f
smrt/: pkg_modflow.f  pkg_rt3d.f  pkg_swat.f  smrt_allocate.f  smrt_close.f  smrt_conversion2mf.f  smrt_conversion2rt3d.f  smrt_conversion2swat.f  smrt_dhru2grid2D.f  smrt_dhru2grid3D.f  smrt_dhru2hru.f  (+27 more)
(+38 files in other folders)
